2000-05-23  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Added right click menus to the table
	header items.

	* e-table-sort-info.c: Fixed a small bug.

2000-05-23  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Make scrollbar arrow buttons work.

2000-05-19  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-example-1.c, e-table-example-2.c, e-table-simple.c,
	e-table-simple.h, e-table-size-test.c, test-check.c, test-cols.c,
	test-table.c: Added initialize_value and value_is_empty callbacks.

	* e-table-model.c, e-table-model.h: Added initialize_value and
	value_is_callback virtual functions to the ETableModel class.

	* e-table-subset.c: Perpetuate the initialize_value and
	value_is_empty methods.

From a patch by Iain Holmes <ih@csd.abdn.ac.uk>
	
	* e-table-config.c, e-table.c: Fixed getting text content from a
	node in the case of a non string based content field in the xml
	library.

2000-05-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c: Fixed a memory leak.

2000-05-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Changed sorting to be at priority
	level 30.  

	* e-table.c: Changed rebuild of the table to be at priority level
	20.  This gives it an advantage over pretty much everything,
	including e-table-sorted-variable sorting and canvas redraw.

2000-05-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c: Removed a memory leak here.

	* e-table-group-leaf.c: Added a ref/sink pair.

	* e-table-group.c, e-table-header-item.c: Removed some unused
	code.

2000-05-16  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-sorted-variable.c: Fixed a FIXME comment.

	* e-table-header.c, e-table-header.h: Added code to put off size
	calculation to the idle loop.  Added code to not resize columns
	with 0 expansion.  Removed the set_width function; it's been
	replaced with a Gtk+ arg.
