@@ -1,5 +1,9 @@
 2000-05-23  Christopher James Lahey  <clahey@helixcode.com>
 
+	* e-table-header-item.c: Fixed the remove column callback.
+
+2000-05-23  Christopher James Lahey  <clahey@helixcode.com>
+
 	* e-table-header-item.c: Added right click menus to the table
 	header items.
 
